Tue May 30 14:05:10 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* New class OmSettings for "global" options.  Not yet implemented
	  or used.

Fri May 26 11:58:24 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Hopefully better detection of Sleepy C++ bits.

Thu May 25 17:47:35 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added max_weight member to OmQueryInternal, so we can store the
	  termweight there when calculating elite terms.

Thu May 25 17:28:52 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented Termlist fetching for net backend.

Thu May 25 15:23:11 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Attempt to build sleepycat support by default.  Also, try and make
	  it more obvious when something can't be found which is needed for
	  building requested support.

Thu May 25 15:22:10 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* More useful exception message when support for a particular
	  database type is not compiled in.

Thu May 25 14:33:20 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Socketserver now updated to use the modified MultiMatch
	  interface.

Thu May 25 14:21:07 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Made all MultiMatch::set_* methods private.  These are now called
	  from the constructor, based the arguments supplied to it.

	* MultiMatch now calls its submatchers prepare_match() at the end
	  of its constructor: this should fix the problems lately experienced
	  with network queries.

Thu May 25 12:07:29 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add a simple test of the max_or_terms feature to apitest.

Thu May 25 12:06:06 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add max_or_terms member to localmatch, to store option in.

Wed May 24 17:55:52 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
