@@ -6,4 +6,4 @@ libomusincludedir = $(includedir)/om
 libomusinclude_HEADERS = om.h \
 omstem.h \
 omerror.h omtypes.h omenquire.h omdocument.h \
-omdatabase.h omindexdoc.h
+omdatabase.h omindexdoc.h omsettings.h
